# loopcode

./: .gitignore  AGENTS.md  Cargo.toml
crates/cpui/: Cargo.toml
crates/cpui/src/: app.rs  color.rs  context.rs  element.rs  entity.rs  frame.rs  geometry.rs  lib.rs  text.rs  view.rs  window.rs
crates/cpui/src/runtime/: event_loop.rs  input_map.rs  lifecycle.rs  mod.rs
crates/xpui/: Cargo.toml
crates/xpui/src/: backend.rs  lib.rs  node.rs  runtime.rs  signal.rs  style.rs
crates/xpui/src/backends/: cpui.rs  gpui.rs  mod.rs
crates/xpui/src/runtime/: app.rs  focus_list.rs  focus_nav.rs  focus_state.rs  mod.rs  text_input.rs  types.rs
crates/xpui/src/widgets/: icon.rs  layout.rs  mod.rs  text.rs  text_input.rs
src/: main.rs
