[package]
name = "loopcode"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
xpui = { path = "crates/xpui", features = ["backend-gpui"] }
unicode-width = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
